zts dynamodb migration from aws v1 to v2
Signed-off-by: Henry Avetisyan <hga@yahooinc.com>